# ToLearnAgent

./: .gitignore  README.md  pyproject.toml
lesson1-langchain/: 00_config.py  01_model_invoke.py  02_messages.py  03_params_stability.py  04_tool_basics.py  05_create_agent_minimal.py  06_create_agent_memory.py  07_structured_output.py  08_rolling_summary_minimal.py  09_agent_with_summary.py  10_bocha_web_search.py  11_debater_structured.py  11_search_gate.py  12_agent_bocha_citations.py  12_two_side_debate_one_round.py  13_five_agents_one_round.py  14_voting_mechanism.py  15_multi_round_loop.py  16_multi_round_with_summary.py
lesson2-langgraph/: lg00_min_loop.py  lg01_single_round_debate_graph.py  lg02_multi_round_debate_graph.py  lg03_thread_persistence_one_round.py  lg04_parallel_turns_graph.py
lesson3-agent/: l01_01_chat_loop.py  l01_02_action_schema.py  l01_03_one_tool_read.py  l01_05_write_policy_apply_patch.py  l01_06_add_bash_tool.py  l01_07_add_search_tools.py  l01_08_todo_and_pathsafe.py
lesson4-agent-project1/: .env.example
lesson4-agent-project10/: core_runtime.py  graph_agent.py  main.py
lesson4-agent-project5/: core_runtime.py  main.py
lesson4-agent-project6/: graph_agent.py
lesson4-agent-project7/: core_runtime.py
lesson4-agent-project8/: graph_agent.py  tools.py
lesson4-agent-project9/: core_runtime.py  main.py  tools.py
lesson5-agent-project2/: agent.py  main.py  tools.py
lesson6/: l00_chat_mvp.py  l01_chat_with_system_and_commands.py  l02_tool_one_shot.py  l03_react_loop_mvp.py  (+9 more)
lesson6-agent-project3/: main.py
playground/: main.py  (+1 more)
(+75 files in other folders)
